# learn-opengl

./: CMakeLists.txt  glad.c  main.cpp
headers/: EBO.h  VAO.h  VBO.h
include/: EBO.h  shaderClass.h
shaders/: Basic.shader
src/: EBO.cpp  GLErrors.cpp  GLErrors.h  IndexBuffer.cpp  Rederer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VBO.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  helpers.h  shaderClass.cpp
src/core/: Application.cpp  Application.h
src/gui/: Gui.cpp  Gui.h  Layer.cpp  Layer.h
src/renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Rederer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/scene/: Mesh.cpp  Mesh.h  Node.h
